<resources>
    <string name="app_name">YokaStore</string>
    <string name="news">资产</string>
    <string name="mine">设置</string>
    <string name="circle">圈子</string>
    <string name="club">俱乐部</string>
    <string name="ranks">设置</string>
    <string name="books">书籍信息</string>
    <string name="games">桌游信息</string>
    <string name="all_rank">全部状态</string>
    <string name="all_status">全部状态</string>
    <string name="all_os">全部系统</string>
    <string name="select_os_iOS">   iOS  </string>
    <string name="select_os_Android"> Android</string>
    <string name="any_device_type">全部类型</string>
    <string name="select_device_phone">手机</string>
    <string name="select_device_tablet">平板</string>
    <string name="select_status_avaliable">空闲</string>
    <string name="select_status_unavailable">占用</string>
    <string name="tip_no_result">没有结果</string>
    <string name="borrow_device">借用设备</string>
    <string name="borrow_device_id">设备ID</string>
    <string name="borrow_device_name">设备名称</string>
    <string name="borrow_device_pre_user">当前使用者</string>
    <string name="borrow_device_pre_time">借出时间</string>
    <string name="borrow_device_status">设备状态</string>
    <string name="borrow_device_department">借用部门</string>
    <string name="borrow_device_user">申请人</string>
    <string name="borrow_device_input_hint">申请人姓名(必填)</string>
    <string name="borrow_device_sure">确认</string>
    <string name="device_id_is_wrong">设备ID错误</string>
    <string name="book_name">书籍名称</string>
    <string name="book_department">所属部门</string>
    <string name="book_user">用户</string>
    <string name="book_status">状态</string>
    <string name="device_name">设备名称</string>
    <string name="device_osname">操作系统</string>
    <string name="device_usr">用户</string>
    <string name="device_status">状态</string>
    <string name="status_available">空闲</string>
    <string name="status_unavailable">占用</string>
    <string name="book_all_status">全部状态</string>
    <string name="book_select_status_one">空闲</string>
    <string name="book_select_status_two">占用</string>
    <string name="book_all_department">所属部门</string>
    <string name="book_all_type">所有类型</string>
    <string name="book_select_type_one">常驻</string>
    <string name="book_select_type_two">公共</string>
    <string name="borrow_book">借用书籍</string>
    <string name="borrow_book_id">书籍ID</string>
    <string name="borrow_book_name">书籍名称</string>
    <string name="borrow_book_pre_user">当前使用者</string>
    <string name="borrow_book_pre_time">借出时间</string>
    <string name="borrow_book_status">设备状态</string>
    <string name="borrow_book_department">借用部门</string>
    <string name="borrow_book_user">申请人</string>
    <string name="borrow_book_input_hint">申请人姓名(必填)</string>
    <string name="borrow_book_sure">确认</string>
    <string name="borrow_book_sure_borrow">确认借用</string>
    <string name="borrow_book_sure_return">确认归还</string>
    <string name="book_id_is_wrong">书籍ID错误</string>
    <string name="please_input_user_name">请输入申请人姓名</string>
    <string name="please_select_department">请选择部门</string>
    <string name="toast_user_name_char_illegal">输入错误</string>
    <string name="borrow_game">借用书籍</string>
    <string name="borrow_game_id">桌游ID</string>
    <string name="borrow_game_name">桌游名称</string>
    <string name="borrow_game_pre_user">当前使用者</string>
    <string name="borrow_game_pre_time">借出时间</string>
    <string name="borrow_game_status">桌游状态</string>
    <string name="borrow_game_department">借用部门</string>
    <string name="borrow_game_user">申请人</string>
    <string name="borrow_game_input_hint">申请人姓名(必填)</string>
    <string name="borrow_game_sure">确认</string>
    <string name="borrow_game_sure_borrow">确认借用</string>
    <string name="borrow_game_sure_return">确认归还</string>
    <string name="game_id_is_wrong">桌游ID错误</string>
    <string name="book_isbn">ISBN：</string>
    <string name="book_code">资产编码：</string>
    <string name="book_department_own">所属部门：</string>
    <string name="game_cName">中文名:</string>
    <string name="game_jName">日文名:</string>
    <string name="game_publisher">出版社：</string>
    <string name="game_code">资产编码：</string>
    <string name="game_department_own">所属部门：</string>
    <string name="game_adress">归属地：</string>
    <string name="game_label">标签：</string>
    <string name="game_msg">备注：</string>
    <string name="game_name">桌游名称</string>
    <string name="game_location">归属地</string>
    <string name="game_departmentUse">借用部门：</string>
    <string name="game_user">用户</string>
    <string name="game_status">状态</string>
    <string name="game_all_status">全部状态</string>
    <string name="game_select_status_one">空闲</string>
    <string name="game_select_status_two">占用</string>
    <string name="game_all_location">归属地</string>
    <string name="game_all_language">所有语言</string>
    <string name="game_select_language_one">中文</string>
    <string name="game_select_language_two">英文</string>
    <string name="game_select_language_three">其他</string>
    <string name="cancel">取消</string>
    <string name="back">返回</string>
    <string name="about">关于</string>
    <string name="register">注册</string>
    <string name="logout">退出</string>
    <string name="please_input_phone">请输入手机号</string>
    <string name="please_input_password">请输入密码</string>
    <string name="please_input_username">请输入账号</string>
    <string name="regist_login">已注册直接登录</string>
    <string name="login">登录</string>
    <string name="forget_password">忘记密码?</string>
    <string name="nickname">昵称</string>
    <string name="net_error">网络异常</string>
    <string name="ok">确定</string>
    <string name="finish">完成</string>
    <string name="hint_text_verifi_code">请输入验证码</string>
    <string name="button_text_send_verifi_code">获取验证码</string>
    <string name="button_text_had_send_verifi_code">重新获取</string>
    <string name="regist_count">注册账号</string>
    <string name="regist_hint_text_password">请设置密码（6-16位字母数字组合）</string>
    <string name="regist_hint_review_password">确认密码</string>
    <string name="regist_hint_text_new_password">请设置新密码（6-16位字母数字组合）</string>
    <string name="regist_hint_review_new_password">再次输入新密码</string>
    <string name="regist_hint_text_orginal_password">输入原密码</string>
    <string name="toast_need_correct_mobile">请输入正确的手机号</string>
    <string name="set_password">设置密码</string>
    <string name="third_login">第三方登录</string>
    <string name="qq">QQ</string>
    <string name="weixin">微信</string>
    <string name="weibo">微博</string>
    <string name="user_protocol">用户协议</string>
    <string name="toast_password_is_null">密码不能为空</string>
    <string name="upload_avatar">上传头像</string>
    <string name="perfect_personal_info_tip">完善个人资料，方便大家认识你</string>
    <string name="please_input_nickname">请输入昵称</string>
    <string name="toast_nickname_is_null">昵称不能为空</string>
    <string name="toast_nickname_cant_be_null">昵称不可为空!</string>
    <string name="toast_nickname_length_illegal">昵称为2-10个字符</string>
    <string name="toast_nickname_char_illegal">不支持特殊符号作为昵称</string>
    <string name="toast_nickname_emoji_illegal">不支持表情作为昵称</string>
    <string name="toast_nickname_has_space_illegal">昵称中不能包含空格</string>
    <string name="perfect_personal_info">完善资料</string>
    <string name="jump_out">跳过</string>
    <string name="setting_and_help">设置与帮助</string>
    <string name="update_password">修改密码</string>
    <string name="focus">关注</string>
    <string name="fans">粉丝</string>
    <string name="sex">性别</string>
    <string name="at_least_two_characters">（至少2字符）</string>
    <string name="geographic_location">地理位置</string>
    <string name="personal_profile">个人简介</string>
    <string name="hint_please_input_personal_profile">请输入您的个性签名</string>
    <string name="personal_information">个人资料</string>
    <string name="my_focus_game">关注的桌游</string>
    <string name="my_daily_plan">每日任务</string>
    <string name="score_shop">积分商城</string>
    <string name="my_game_circle">我的桌游圈</string>
    <string name="my_collect_news">收藏的资讯</string>
    <string name="not_login">未登录</string>
    <string name="login_know_you">登录让更多的人认识你</string>
    <string name="take_a_photo">拍照</string>
    <string name="album">相册</string>
    <string name="focus_together">相互关注</string>
    <string name="cancel_focus">取消关注</string>
    <string name="add_focus">+关注</string>
    <string name="press_again_quit">亲，再按一次就退出咯~</string>
    <string name="change_pwd_success">修改密码成功</string>
    <string name="net_not_connect">网络未连接</string>
    <string name="collect_news">收藏的资讯</string>
    <string name="my_circle_game">我的桌游圈</string>
    <string name="common">评论</string>
    <string name="my_fans">我的粉丝</string>
    <string name="my_attention">我的关注</string>
    <string name="save">保存</string>
    <string name="perfect_personal_info_success">完善资料成功</string>
    <string name="change_success">修改成功</string>
    <string name="change_failed">修改失败</string>
    <string name="private_content">个人简介</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="avatar">头像</string>
    <string name="already_read">浏览</string>
    <string name="login_out">退出登录</string>
    <string name="clear_cache">清除缓存</string>
    <string name="no_people_attention">还没有人关注你</string>
    <string name="no_focus">尚未关注</string>
    <string name="no_publish_anything">未发布过动态</string>
    <string name="no_circle">尚无动态</string>
    <string name="no_collect">尚未收藏</string>
    <string name="no_content">尚无内容</string>
    <string name="no_attention">尚无关注</string>
    <string name="attention_games">关注的桌游</string>
    <string name="attent_success">关注成功</string>
    <string name="cancel_success">取消成功</string>
    <string name="toast_content_is_over_twenty">个性签名不能超过30个字符</string>
    <string name="all">全部</string>
    <string name="detail">详情</string>
    <string name="score">评分</string>
    <string name="dev">开发版</string>
    <string name="dis">正式版</string>
    <string name="custom">其他</string>
    <string name="game_recommend">桌游推荐</string>
    <string name="any_number_people">任意人数</string>
    <string name="select_people_one">1～4人</string>
    <string name="select_people_two">5～8人</string>
    <string name="select_people_three">8～12人</string>
    <string name="select_people_four">12人以上</string>
    <string name="no_limit_time">不限时间</string>
    <string name="select_time_one">0～30分钟</string>
    <string name="select_time_two">30～60分钟</string>
    <string name="select_time_three">60～120分钟</string>
    <string name="select_time_four">2～3小时</string>
    <string name="select_time_five">3小时以上</string>
    <string name="card_atlas">卡牌图集</string>
    <string name="transtion_image">transtionImage</string>
    <string name="game_recom_doc">桌游攻略</string>
    <string name="attent_game_recommend_other_game">关注这个桌游的人还关注了</string>
    <string name="attention">关注</string>
    <string name="already_attention">已关注</string>
    <string name="score_people_number">评分人数</string>
    <string name="search">搜索</string>
    <string name="input_search_content">输入搜索内容</string>
    <string name="doc">文章</string>
    <string name="game">桌游</string>
    <string name="comment_detail">评论详情</string>
    <string name="hint_comment_edit">发表评论...</string>
    <string name="toast_comment_cant_be_null">评论不能为空～</string>
    <string name="tip_data_error">数据异常</string>
    <string name="sort_by_heat">按热度排序</string>
    <string name="sort_by_time">按时间排序</string>
    <string name="sort_by_heat_short">按热度</string>
    <string name="sort_by_time_short">按时间</string>
    <string name="hot_search">热门搜索</string>
    <string name="history_search">历史搜索</string>
    <string name="report">举报</string>
    <string name="please_select_report_reason">请选择投诉的原因：</string>
    <string name="pornography_obscenity">色情、淫秽</string>
    <string name="sure_report">确认投诉</string>
    <string name="reactionary_political">反动、政治</string>
    <string name="advertising_marketing">广告营销</string>
    <string name="malicious_attacks_and_abuses">恶意攻击与谩骂</string>
</resources>