<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="85dp"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp">

    <TextView
        android:id="@+id/tv_sort_number"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="#686868"
        android:layout_centerVertical="true"
        android:visibility="gone"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp"
        android:layout_toEndOf="@+id/tv_sort_number"
        android:layout_toRightOf="@+id/tv_sort_number"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/device_name"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_osversion"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/device_osname"
            android:textColor="#686868"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/tv_usrdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/device_usr"
            android:textColor="#686868"
            android:textSize="11sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/device_status"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:textColor="#5bc4be"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/main_line"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>